--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,17 @@ uvicorn==0.27.0
 sqlalchemy==2.0.23
 pydantic==2.11.3  # ← バージョン衝突解消のため、2.11系へアップ
 requests==2.31.0
-pandas==2.1.4
-numpy==1.26.2
+# pandas==2.1.4
+# numpy==1.26.2
 python-dateutil==2.8.2
 pymysql==1.1.0
 # mysqlclient==2.2.1 ➩ ChatGPTによるとビルドに時間がかかる原因で今回不要（pymysqlと重複）
 python-decouple==3.8
 # openai==1.68.2 ➩ 最新バージョン（1.73.0）に統一
-openai==1.73.0
-langchain==0.3.23
-langchain-openai==0.3.12
-langchain-community==0.3.21
+# openai==1.73.0
+# langchain==0.3.23
+# langchain-openai==0.3.12
+# langchain-community==0.3.21
 tiktoken==0.9.0
 # python-dotenv==1.0.0 ➩ 最新にアップデート（1.1.0）に統一
 python-dotenv==1.1.0
